# ap-airflow

./: .gitignore  .pre-commit-config.yaml
.circleci/: common.py  config.yml.j2  generate_circleci_config.py  update_dockerfiles.py
2.1.4/buster/: Dockerfile  build-time-pip-constraints.txt  trivyignore
2.2.5/bullseye/: build-time-pip-constraints.txt
2.3.0/bullseye/: build-time-pip-constraints.txt
2.3.0/bullseye/include/: pip.conf
2.3.3/bullseye/: Dockerfile  build-time-pip-constraints.txt
2.3.3/bullseye/include/: pip.conf
images/: Dockerfile
images/bullseye/: Dockerfile  build-time-pip-constraints.txt
package/: dev-requirements.txt  setup.cfg  setup.py
package/astronomer/: environment.py  seed_log_template.py
package/astronomer/certified/: blueprint.py  plugin.py
package/astronomer/certified/templates/: certified_base.html
package/astronomer/version_check/: update_checks.py
package/astronomer_certified_extensions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
package/tests/: conftest.py  test_plugin.py  test_update_checks.py
